[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
textblob = "^0.17.1"
vaderSentiment = "^3.3.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
fastapi = "uvicorn"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
